2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

06-Sep-2010 Ian MacLennan
 # [#21573] Error in flash uploader

06-Sep-2010 Jean-Marie Simonet
 # [#22053] sample data article capitalisation. Thanks Tim.
 $ [#22272] Database Error. Thanks Bill.

06-Sep-2010 Andrew Eddie
 # Fixed issue [#22246] Remove potty mouth language from htaccess (Brian Teeman, Bill Richardson).
 # Fixed issue [#22273] This is a demo. Delete for beta (Michael Babker).
 # Fixed issue [#21658] Marking items as required (Michael Babker, Bill Richardson).

05-Sep-2010 Jean-Marie Simonet
 # [#22219] Remove overrides from Beez2.
 # [#22203] toolbar icon consistency. Thanks Michael and Bill.
 # [#22257] User with Delete permission unable to delete a user. Thanks Michael.
 # [#22191] Search image. Thanks Christophe and Bill.
 $ [#22192] Code Mirror tab mode description missing.Thanks Bill.
 # [#22275] Two check-in buttons in Newsfeeds. Thanks Michael.
 # [#22207] toolbar icon divider in administrator template. Thanks Bill.
 
03-Sep-2010 Mark Dexter
 # Fix syntax errors in diff_15_to_16.sql (Elin Waring)

03-Sep-2010 Jean-Marie Simonet
 # [#22186] beez2 - Park links right module displacement.
 
03-Sep-2010 Andrew Eddie
 # Fixed issue [#22248] Fix inappropriate code comment (Brian Teeman, Bill Richardson).
 # Fixing issue [#21447] - Added user.debug task to user controller to assist with access control testing.

02-Sep-2010 Ian MacLennan
 # Fixed typo in 15 to 16 diff sql file
 # Added missing semicolon in diff sql file.

02-Sep-2010 Jean-Marie Simonet
 # [#22149] Tool bar clean up focused on users with delete only. Thanks Elin.
 # [#22002] Edit state ACL in edit views. Thanks Elin.

02-Sep-2010 Andrew Eddie