@@ -299,10 +299,10 @@ class ContentControllerArticle extends JController
 			for ($i = 0, $n = count($errors); $i < $n && $i < 3; $i++)
 			{
 				if (JError::isError($errors[$i])) {
-					$app->enqueueMessage($errors[$i]->getMessage(), 'notice');
+					$app->enqueueMessage($errors[$i]->getMessage(), 'warning');
 				}
 				else {
-					$app->enqueueMessage($errors[$i], 'notice');
+					$app->enqueueMessage($errors[$i], 'warning');
 				}
 			}
 
@@ -321,7 +321,7 @@ class ContentControllerArticle extends JController
 			$app->setUserState($context.'data', $data);
 
 			// Redirect back to the edit screen.
-			$this->setMessage(JText::sprintf('JLIB_APPLICATION_ERROR_SAVE_FAILED', $model->getError()), 'notice');
+			$this->setMessage(JText::sprintf('JLIB_APPLICATION_ERROR_SAVE_FAILED', $model->getError()), 'warning');
 			$this->setRedirect(JRoute::_('index.php?option=com_content&view=form&layout=edit', false));
 			return false;
 		}
