@@ -57,9 +57,9 @@ class JInstallationControllerSetup extends JController
 			for ($i = 0, $n = count($errors); $i < $n && $i < 3; $i++) {
 
 				if (JError::isError($errors[$i])) {
-					$app->enqueueMessage($errors[$i]->getMessage(), 'notice');
+					$app->enqueueMessage($errors[$i]->getMessage(), 'warning');
 				} else {
-					$app->enqueueMessage($errors[$i], 'notice');
+					$app->enqueueMessage($errors[$i], 'warning');
 				}
 			}
 
@@ -102,9 +102,9 @@ class JInstallationControllerSetup extends JController
 			for ($i = 0, $n = count($errors); $i < $n && $i < 3; $i++) {
 
 				if (JError::isError($errors[$i])) {
-					$app->enqueueMessage($errors[$i]->getMessage(), 'notice');
+					$app->enqueueMessage($errors[$i]->getMessage(), 'warning');
 				} else {
-					$app->enqueueMessage($errors[$i], 'notice');
+					$app->enqueueMessage($errors[$i], 'warning');
 				}
 			}
 
@@ -165,9 +165,9 @@ class JInstallationControllerSetup extends JController
 			for ($i = 0, $n = count($errors); $i < $n && $i < 3; $i++) {
 
 				if (JError::isError($errors[$i])) {
-					$app->enqueueMessage($errors[$i]->getMessage(), 'notice');
+					$app->enqueueMessage($errors[$i]->getMessage(), 'warning');
 				} else {
-					$app->enqueueMessage($errors[$i], 'notice');
+					$app->enqueueMessage($errors[$i], 'warning');
 				}
 			}
 
@@ -216,9 +216,9 @@ class JInstallationControllerSetup extends JController
 			for ($i = 0, $n = count($errors); $i < $n && $i < 3; $i++) {
 
 				if (JError::isError($errors[$i])) {
-					$app->enqueueMessage($errors[$i]->getMessage(), 'notice');
+					$app->enqueueMessage($errors[$i]->getMessage(), 'warning');
 				} else {
-					$app->enqueueMessage($errors[$i], 'notice');
+					$app->enqueueMessage($errors[$i], 'warning');
 				}
 			}
 
