@@ -53,6 +53,10 @@ class JDocumentRendererMessage extends JDocumentRenderer
 			{
 				if (count($msgs))
 				{
+					if ( ($type == 'notice') || ($type == 'warning') || ($type == 'error') ) {
+					} else {
+						$type = 'notice';
+					}									
 					$buffer .= "\n<dt class=\"".strtolower($type)."\">".JText::_($type)."</dt>";
 					$buffer .= "\n<dd class=\"".strtolower($type)." message fade\">";
 					$buffer .= "\n\t<ul>";
