@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 06-Sep-2010 Ian MacLennan
  # [#21573] Error in flash uploader
+ # [#22018] The alert of "failed" creating a menu item doesn't look like a Failed (admin default template)
 
 06-Sep-2010 Jean-Marie Simonet
  # [#22053] sample data article capitalisation. Thanks Tim.
